@@ -1,34 +1,28 @@
 package geeks;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.LinkedList;
 
 // Time Complexity: O(n*(2^n))
 
 public class ArraySum {
 
-    private static int[] a = {0, 15, -2, 2, -8, 1, 7, 10, 23};
-    private static List<Integer> al = new ArrayList<>();
-    private static Map<String, Integer> map = new HashMap<>();
-
-    public static void combinationForSum(int index, int givenSum, int curSum) {
-        if (curSum == givenSum) {
-            map.put(al.toString(), al.size());
-        }
-        if (curSum > givenSum) {
-            return;
+    public static void combinationForSum(int[] a, int index, int givenSum, int curSum, LinkedList<Integer> list) {
+        if (curSum == givenSum && !list.isEmpty()) {
+            System.out.println(list);
         }
         for (int i = index; i < a.length; i++) {
             curSum += a[i];
-            al.add(a[i]);
-            combinationForSum(i + 1, givenSum, curSum);
-            al.remove(al.size() - 1);
+            list.add(a[i]);
+            combinationForSum(a, i + 1, givenSum, curSum, list);
+            list.removeLast();
             curSum -= a[i];
         }
     }
 
     public static void main(String[] args) {
+        int[] a = {0, 15, -2, 2, -8, 1, 7, 10, 23};
         Arrays.sort(a);
-        combinationForSum(0, 0, 0);
-        System.out.println(map);
+        combinationForSum(a, 0, 0, 0, new LinkedList<>());
     }
 }
